--- a/View/indexpaziente.html
+++ b/View/indexpaziente.html
@@ -60,7 +60,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="prenotaesame.html">Prenota esame</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaesamiprenotati.html">Visualizza Esami Prenotati</a>
+                                <a class="nav-link" href="visualizzaesamiprenotati_paziente.html">Visualizza Esami Prenotati</a>
                             </li>
 
                             <!--<li class="nav-item">
@@ -81,7 +81,7 @@ https://templatemo.com/tm-566-medic-care
                             </li>-->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzastoricoesami">Visualizza Storico Esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami.html">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
