--- a/View/indexmedico.html
+++ b/View/indexmedico.html
@@ -52,10 +52,10 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Storico esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_medico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#about">Visualizza agenda</a>
