--- a/View/inseriscirecensione.html
+++ b/View/inseriscirecensione.html
@@ -103,75 +103,31 @@ https://templatemo.com/tm-566-medic-care
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <br>
+                    <h2>Medico : Emanuele Papile</h2>
+                    <br>
+                    <h2>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
+                    <br>
+                    <h2>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h2>
+                    <br>
                     <form action="#">
-                        <div class="form-group" >
-                            <h3><label for="categ">Tipologia</label></h3>
-                            <select name="languages" id="categ" class="form-select">
-                                <option value="select">Seleziona una tipologia</option>
-                                <option value="dentista">dentista</option>
-                                <option value="oculista">oculista</option>
-                                <option value="otorino">otorino</option>
-                                <option value="cardiologo">cardiologo</option>
-                                <option value="radiologo">radiologo</option>
-                                <option value="neurologo">neurologo</option>
-                                <option value="urologo">urologo</option>
-                                <option value="neurofisiopatologo">neurofisiopatologo</option>
-                            </select>
-                        </div>
+                        <div class="form-group"></div>
+                            <label for="oggetto">Oggetto : </label>
+                            <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;">
+                            <br><br><label for="contenuto">Contenuto :</label>
+                            <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;">
+                            <br><br>
+                            <h2>Valutazione : </h2>
                             <br>
-                                <div>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-                                    </input>
-                                    </div>
-                                    <br>
-                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
+                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-9" id="elenco">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Data</th>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Medico</th>
-                        <th scope="col">Tipologia</th>
-                        <th scope="col">Costo</th>
-                        <th scope="col">Azioni</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>01/06/2024</td>
-                        <td>10:00</td>
-                        <td>Papile</td>
-                        <td>Cardiologo</td>
-                        <td>50€</td>
-                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                    </tr>
-                    <tr>
-                        <td>10/08/2024</td>
-                        <td>12:00</td>
-                        <td>Iannotti</td>
-                        <td>Neurologo</td>
-                        <td>80€</td>
-                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                    </tr>
-                    <tr>
-                        <td>11/12/2024</td>
-                        <td>09:00</td>
-                        <td>Di Simone</td>
-                        <td>Oculistica</td>
-                        <td>50€</td>
-                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+                    
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
