modifiche grafiche casi uso medico v2

--- a/View/indexmedico.html
+++ b/View/indexmedico.html
@@ -25,6 +25,7 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+        <link href="casimedico.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -55,10 +56,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="visualizzastoricoesami_medico.html">Storico esami</a>
+                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">Visualizza agenda</a>
+                                <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
                             </li>
 
                             <li class="nav-item">
@@ -75,14 +76,10 @@ https://templatemo.com/tm-566-medic-care
                             </li>-->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#booking">Recensioni</a>
-                            </li>
-
-                            <li class="nav-item">
                                 <a class="nav-link" href="#contact">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Ricerca pazienti</a>
+                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#booking">Recensioni</a>
