grafica caso uso medico statistichee guadagno

--- a/View/indexmedico.html
+++ b/View/indexmedico.html
@@ -56,11 +56,9 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-<<<<<<< HEAD
-                                <a class="nav-link" href="visualizzastoricoesami_medico.html">Storico esami</a>
-=======
                                 <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
->>>>>>> emanuele
+                                
+
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
@@ -80,7 +78,7 @@ https://templatemo.com/tm-566-medic-care
                             </li>-->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Statistiche</a>
+                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
