--- a/View/visualizzastoricoesamipaziente.html
+++ b/View/visualizzastoricoesamipaziente.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#booking">Recensioni</a>
+                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
