--- a/View/inseriscidata_perstatistiche.html
+++ b/View/inseriscidata_perstatistiche.html
@@ -25,6 +25,8 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+
+        <link href="casimedico.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -55,10 +57,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="visualizzastoricoesami_medico.html">Storico esami</a>
+                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">Visualizza agenda</a>
+                                <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
                             </li>
 
                             <li class="nav-item">
@@ -73,16 +75,11 @@ https://templatemo.com/tm-566-medic-care
                             <!--<li class="nav-item">
                                 <a class="nav-link" href="#reviews">Testimonials</a>
                             </li>-->
-
                             <li class="nav-item">
-                                <a class="nav-link" href="#booking">Recensioni</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Statistiche</a>
+                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Ricerca pazienti</a>
+                                <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#booking">Recensioni</a>
@@ -107,74 +104,21 @@ https://templatemo.com/tm-566-medic-care
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <form action="#">
-                        <div class="form-group" >
-                            <!--<h3><label for="categ">Tipologia</label></h3>
-                            <select name="languages" id="categ" class="form-select">
-                                <option value="select">Seleziona una tipologia</option>
-                                <option value="dentista">dentista</option>
-                                <option value="oculista">oculista</option>
-                                <option value="otorino">otorino</option>
-                                <option value="cardiologo">cardiologo</option>
-                                <option value="radiologo">radiologo</option>
-                                <option value="neurologo">neurologo</option>
-                                <option value="urologo">urologo</option>
-                                <option value="neurofisiopatologo">neurofisiopatologo</option>
-                            </select>-->
+                    <form action="visualizzastatistiche.html">
+                        <div class="form-group">
+                                <h2>Inserire un intervallo di date per visualizzarne le relative statistiche</h2>
+                                <br>
+                                <input type="date" id="datainizio" placeholder="Data Inizio" name="datainizio" />
+                                <br><br><br>
+                                <input type="date" id="datafine" placeholder="Data Fine" name="datafine"  />
+                                <br><br><br>
+                                <button class="btn btn-primary">Visualizza statistiche <br>nell'intervallo selezionato</button>
                         </div>
-                            <br>
-                                <div>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-                                    </input>
-                                    </div>
-                                    <br>
-                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-9" id="elenco">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Nome Paziente</th>
-                        <th scope="col">Cognome Paziente</th>
-                        <th scope="col">Data</th>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Tipologia</th>
-                        <th scope="col">Azioni</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Giacomo</td>
-                        <td>Giannini</td>
-                        <td>24/05/2024</td>
-                        <td>10:00</td>
-                        <td>Urologia</td>
-                        <td><button class="btn btn-primary">Carica Referto</button></td>
-                    </tr>
-                    <tr>
-                        <td>Piero</td>
-                        <td>Marcozzi</td>
-                        <td>01/01/2024</td>
-                        <td>08:30</td>
-                        <td>Neurologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Cancella Referto</button></td>
-                    </tr>
-                    <tr>
-                        <td>Elisabetta</td>
-                        <td>Mecozzi</td>
-                        <td>05/03/2024</td>
-                        <td>11:20</td>
-                        <td>Cardiologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Elimina Referto</button></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
