--- a/View/storicoesami_perpaziente.html
+++ b/View/storicoesami_perpaziente.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="#reviews">Testimonials</a>
                             </li>-->
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Statistiche</a>
+                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
