--- a/View/visualizzastatistiche.html
+++ b/View/visualizzastatistiche.html
@@ -104,74 +104,22 @@ https://templatemo.com/tm-566-medic-care
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <form action="#">
-                        <div class="form-group" >
-                            <!--<h3><label for="categ">Tipologia</label></h3>
-                            <select name="languages" id="categ" class="form-select">
-                                <option value="select">Seleziona una tipologia</option>
-                                <option value="dentista">dentista</option>
-                                <option value="oculista">oculista</option>
-                                <option value="otorino">otorino</option>
-                                <option value="cardiologo">cardiologo</option>
-                                <option value="radiologo">radiologo</option>
-                                <option value="neurologo">neurologo</option>
-                                <option value="urologo">urologo</option>
-                                <option value="neurofisiopatologo">neurofisiopatologo</option>
-                            </select>-->
+                    <form action="inseriscidata_perstatistiche.html">
+                        <div class="form-group">
+                            <div>
+                                <h2>Statistiche nell'intervallo di tempo selezionato</h2>
+                                <br><br>
+                                <h4>Esami Svolti : 6</h4>
+                                <br><br>
+                                <h4>Guadagno Complessivo : 1200€</h4>
+                                <br><br>
+                                <button class="btn btn-primary">Cambia intervallo di tempo</button>
                         </div>
-                            <br>
-                                <div>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-                                    </input>
-                                    </div>
-                                    <br>
-                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-9" id="elenco">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Nome Paziente</th>
-                        <th scope="col">Cognome Paziente</th>
-                        <th scope="col">Data</th>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Tipologia</th>
-                        <th scope="col">Azioni</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Giacomo</td>
-                        <td>Giannini</td>
-                        <td>24/05/2024</td>
-                        <td>10:00</td>
-                        <td>Urologia</td>
-                        <td><a href="inseriscireferto.html"><button class="btn btn-primary">Carica Referto</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>Piero</td>
-                        <td>Marcozzi</td>
-                        <td>01/01/2024</td>
-                        <td>08:30</td>
-                        <td>Neurologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Cancella Referto</button></td>
-                    </tr>
-                    <tr>
-                        <td>Elisabetta</td>
-                        <td>Mecozzi</td>
-                        <td>05/03/2024</td>
-                        <td>11:20</td>
-                        <td>Cardiologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Elimina Referto</button></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
