modifiche grafiche casi uso medico v3

--- a/View/casimedico.css
+++ b/View/casimedico.css
@@ -51,3 +51,9 @@ h4, label {
         font-size: xx-large;
         font-weight: bold;
     }
+    #orari{
+        border: 1px solid;
+    }
+    th{
+        border: 1px solid;
+    }
