--- a/View/visualizzastoricoesamipaziente.html
+++ b/View/visualizzastoricoesamipaziente.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-566-medic-care
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#timeline">Carica slot per appuntamento</a>
+                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
                             </li>
 
                             <div class="navbar-brand d-none d-lg-block">
@@ -76,13 +76,13 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="#reviews">Testimonials</a>
                             </li>-->
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Statistiche</a>
+                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="inseriscidata_perstatistiche.html">Recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
