--- a/View/inseriscislotorario.html
+++ b/View/inseriscislotorario.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-566-medic-care
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
+                                <a class="nav-link" href="inseriscislotorario.html ">Carica slot per appuntamento</a>
                             </li>
 
                             <div class="navbar-brand d-none d-lg-block">
@@ -106,71 +106,74 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <!--<h3><label for="categ">Tipologia</label></h3>
-                            <select name="languages" id="categ" class="form-select">
-                                <option value="select">Seleziona una tipologia</option>
-                                <option value="dentista">dentista</option>
-                                <option value="oculista">oculista</option>
-                                <option value="otorino">otorino</option>
-                                <option value="cardiologo">cardiologo</option>
-                                <option value="radiologo">radiologo</option>
-                                <option value="neurologo">neurologo</option>
-                                <option value="urologo">urologo</option>
-                                <option value="neurofisiopatologo">neurofisiopatologo</option>
-                            </select>-->
-                        </div>
-                            <br>
+                            <div class="col-9" id="elenco">
+                                <h2>Disponibilità Orari Attule</h2>
+                                <table class="table" id style="border: 1px solid;">
+                                    <thead >
+                                        <tr>
+                                            <th scope="col">LUN 27/05</th>
+                                            <th scope="col">MAR 28/05</th>
+                                            <th scope="col">MER 29/05</th>
+                                            <th scope="col">GIO 30/05</th>
+                                            <th scope="col">VEN 31/05</th>
+                                            <th scope="col">SAB 01/06</th>
+                                            <th scope="col">DOM 02/06</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>14:30</td>
+                                            <td>15:30</td>
+                                            <td>16:30</td>
+                                            <td>17:30</td>
+                                            <td>18:30</td>
+                                        </tr>
+                                        <tr>
+                                            <td>14:30</td>
+                                            <td>15:30</td>
+                                            <td>16:30</td>
+                                            <td>17:30</td>
+                                            <td>18:30</td>
+                                        </tr>
+                                        <tr>
+                                            <td>14:30</td>
+                                            <td>15:30</td>
+                                            <td>16:30</td>
+                                            <td>17:30</td>
+                                            <td>18:30</td>
+                                        </tr>
+                                        <tr>
+                                            <td>08:30</td>
+                                            <td>09:30</td>
+                                            <td>10:30</td>
+                                            <td>11:30</td>
+                                            <td>12:30</td>
+                                        </tr>
+                                        <tr>
+                                            <td>08:30</td>
+                                            <td>09:30</td>
+                                            <td>10:30</td>
+                                            <td>11:30</td>
+                                            <td>12:30</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                                 <div>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-                                    </input>
-                                    </div>
+                                    <label>Disponibile in data : </label>&ensp;<input type="date" id="datadisp" placeholder="Data Disponibile" name="datadisp" />
                                     <br>
-                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
+                                    <label>Inizio orario di Disponibilità : </label>&ensp;<input type="time" id="inizioorario" placeholder="Inizio Orario" name="inizioorario" />
+                                    <br>
+                                    <label>Fine orario di Disponibilità : </label>&ensp;<input type="time" id="fineorario" placeholder="Fine Orario" name="fineorario" />
+                                    </div>
+                            </div>
+                        </div>
+                            <br><br><br>
+                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
                     </form>
                 </div>
             </div>
-        </div>
-        <div class="col-9" id="elenco">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Nome Paziente</th>
-                        <th scope="col">Cognome Paziente</th>
-                        <th scope="col">Data</th>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Tipologia</th>
-                        <th scope="col">Azioni</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Giacomo</td>
-                        <td>Giannini</td>
-                        <td>24/05/2024</td>
-                        <td>10:00</td>
-                        <td>Urologia</td>
-                        <td><a href="inseriscireferto.html"><button class="btn btn-primary">Carica Referto</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>Piero</td>
-                        <td>Marcozzi</td>
-                        <td>01/01/2024</td>
-                        <td>08:30</td>
-                        <td>Neurologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Cancella Referto</button></td>
-                    </tr>
-                    <tr>
-                        <td>Elisabetta</td>
-                        <td>Mecozzi</td>
-                        <td>05/03/2024</td>
-                        <td>11:20</td>
-                        <td>Cardiologia</td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
-                        <td><button class="btn btn-primary">Elimina Referto</button></td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
